--- a/src/examples/java_monorepo_workflows.yml
+++ b/src/examples/java_monorepo_workflows.yml
@@ -22,38 +22,62 @@ usage:
     modified-common:
       type: boolean
       default: false
-    # FIXME: replace with your actual app name
+    # FIXME: replace suffix with your actual app name
     modified-app1:
       type: boolean
       default: false
-    # FIXME: replace with your actual app name
+    # FIXME: replace suffix with your actual app name
     modified-app2:
       type: boolean
       default: false
 
   cfg-isopod-version: &cfg-isopod-version
-    isopod_version: '0.29.1'
+    isopod_version: '0.29.4'
   cfg-cache-key-prefix: &cfg-cache-key-prefix
-    # FIXME: replace with your actual repo name
+    # FIXME: replace value with your actual repo name
     cache_key_prefix: my-repo
+
+  # NOTE: job name of no-op build jobs must match respective name of apps actual build jobs so that github can stay agnostic!
+  # FIXME: replace suffix with your actual app name
+  maven-build-test-app1: &maven-build-test-app1 'maven-build-test-app1'
+  # FIXME: replace suffix with your actual app name
+  maven-build-test-app2: &maven-build-test-app2 'maven-build-test-app2'
 
   workflows:
     version: 2
 
-    no-code-change:
+    # FIXME: replace infix with your actual app name
+    no-app1-change:
       when:
         and:
+          # FIXME: replace suffix with your actual app name
           - not: << pipeline.parameters.modified-app1 >>
+          - not: << pipeline.parameters.modified-common >>
+      jobs:
+        # github status check typically checks this job
+        # the idea is that, depending on whether there were changes to the app or not, github either considers this no-op here or the actual build status (without knowing which)
+        - ric-orb/no_op:
+            # FIXME: replace suffix with your actual app name (name must match name of the actual build job for the app!)
+            name: *maven-build-test-app1
+
+    # FIXME: replace infix with your actual app name
+    no-app2-change:
+      when:
+        and:
+          # FIXME: replace suffix with your actual app name
           - not: << pipeline.parameters.modified-app2 >>
           - not: << pipeline.parameters.modified-common >>
-
       jobs:
-        - ric-orb/no_op
+        # github status check typically checks this job
+        # the idea is that, depending on whether there were changes to the app or not, github either considers this no-op here or the actual build status (without knowing which)
+        - ric-orb/no_op:
+            # FIXME: replace suffix with your actual app name
+            name: *maven-build-test-app2
 
     ###########################################################################
     # workflow for maven module 'app1'
     ###########################################################################
-    # FIXME: replace with your actual app name
+    # FIXME: replace name with your actual app name
     app1:
       when:
         or:
@@ -61,10 +85,12 @@ usage:
           - << pipeline.parameters.modified-common >>
 
       jobs:
+        # github status check typically checks this job
         - ric-orb/maven_build_test:
-            name: 'maven-build-test'
+            # FIXME: replace suffix with your actual app name
+            name: *maven-build-test-app1
             context: dev
-            # FIXME: replace with your actual app path
+            # FIXME: replace value with your actual app path
             path: 'app1'
             <<: *cfg-cache-key-prefix
             executor: maven_docker
@@ -80,11 +106,12 @@ usage:
         - ric-orb/build_push_image:
             name: 'build-push-image'
             context: dev
-            # FIXME: replace with your actual app path
+            # FIXME: replace value with your actual app path
             path: 'app1'
             <<: *cfg-isopod-version
             requires:
-              - maven-build-test
+              # FIXME: replace suffix with your actual app name
+              - *maven-build-test-app1
               # note semantic of 'requires': on master this is ignored
               - approve_deploy_dev_branch
 
@@ -96,7 +123,7 @@ usage:
         - ric-orb/deploy_job:
             name: 'deploy-dev'
             context: dev
-            # FIXME: replace with your actual app path
+            # FIXME: replace value with your actual app path
             path: 'app1'
             <<: *cfg-isopod-version
             env: 'dev'
@@ -106,7 +133,7 @@ usage:
         - ric-orb/deploy_job:
             name: 'deploy-prod'
             context: prod
-            # FIXME: replace with your actual app path
+            # FIXME: replace value with your actual app path
             path: 'app1'
             <<: *cfg-isopod-version
             env: 'prod'
@@ -120,7 +147,7 @@ usage:
     ###########################################################################
     # maven module: 'app2'
     ###########################################################################
-    # FIXME: replace with your actual app name
+    # FIXME: replace name with your actual app name
     app2:
       when:
         or:
@@ -128,10 +155,12 @@ usage:
           - << pipeline.parameters.modified-common >>
 
       jobs:
+        # github status check typically checks this job
         - ric-orb/maven_build_test:
-            name: 'maven-build-test'
+            # FIXME: replace suffix with your actual app name
+            name: *maven-build-test-app2
             context: dev
-            # FIXME: replace with your actual app path
+            # FIXME: replace value with your actual app path
             path: 'app2'
             <<: *cfg-cache-key-prefix
 #            executor: maven_docker
@@ -147,11 +176,12 @@ usage:
         - ric-orb/build_push_image:
             name: 'build-push-image'
             context: dev
-            # FIXME: replace with your actual app path
+            # FIXME: replace value with your actual app path
             path: 'app2'
             <<: *cfg-isopod-version
             requires:
-              - maven-build-test
+              # FIXME: replace suffix with your actual app name
+              - *maven-build-test-app2
               # note semantic of 'requires': on master this is ignored
               - approve_deploy_dev_branch
 
@@ -163,7 +193,7 @@ usage:
         - ric-orb/deploy_job:
             name: 'deploy-dev'
             context: dev
-            # FIXME: replace with your actual app path
+            # FIXME: replace value with your actual app path
             path: 'app2'
             <<: *cfg-isopod-version
             env: 'dev'
@@ -173,7 +203,7 @@ usage:
         - ric-orb/deploy_job:
             name: 'deploy-prod'
             context: prod
-            # FIXME: replace with your actual app path
+            # FIXME: replace value with your actual app path
             path: 'app2'
             <<: *cfg-isopod-version
             env: 'prod'
