--- a/src/examples/java_singleapprepo.yml
+++ b/src/examples/java_singleapprepo.yml
@@ -17,17 +17,18 @@ usage:
     ric-orb: ricardo/ric-orb@2
 
   cfg-isopod-version: &cfg-isopod-version
-    isopod_version: '0.29.1'
+    isopod_version: '0.29.4'
   cfg-cache-key-prefix: &cfg-cache-key-prefix
-    # FIXME: replace with your actual repo name
+    # FIXME: replace value with your actual repo name
     cache_key_prefix: my-repo
 
   workflows:
     version: 2
 
-    # FIXME: replace with your actual app name
+    # FIXME: replace name with your actual app name
     java_single_app_repo:
       jobs:
+        # github status check typically checks this job
         - ric-orb/maven_build_test:
             name: 'maven-build-test'
             context: dev
