execute isopod with module directory as working directory - allows to have path-agnostic dockerfiles in monorepos

--- a/src/jobs/build_push_image.yml
+++ b/src/jobs/build_push_image.yml
@@ -85,5 +85,5 @@ steps:
       at: .
   - steps: << parameters.prebuild_steps >>
   - build_push:
-      config: << parameters.path >>/isopod.yml
+      work_dir: << parameters.path >>
   - steps: << parameters.postbuild_steps >>
