--- a/src/examples/go_singlerepo.yml
+++ b/src/examples/go_singlerepo.yml
@@ -13,6 +13,10 @@ usage:
   cfg-isopod-version: &cfg-isopod-version
     isopod_version: 0.29.4
 
+  cfg-go-build-test-executor: &cfg-go-build-test-executor
+    name: go/default
+    tag: '1.17'
+
   workflows:
     version: 2
     #FIXME: replace with app name
@@ -21,6 +25,7 @@ usage:
         - ric-orb/go_build_test:
             name: build-test
             context: dev
+            executor: *cfg-go-build-test-executor
         - request_branch_deploy_dev:
             type: approval
             name: request-deploy
