--- a/src/jobs/js_install_dependencies_job.yml
+++ b/src/jobs/js_install_dependencies_job.yml
@@ -13,11 +13,13 @@ steps:
   - checkout
   - run:
       name: Install dependencies
-      command: yarn --immutable
+      command: |
+        cd << parameters.monorepoAppPath >>
+        yarn --immutable
   - persist_to_workspace:
       root: .
       paths:
-        - node_modules
+        - << parameters.monorepoAppPath >>/node_modules
 
 # Parameters
 
@@ -26,3 +28,6 @@ parameters:
     default: lts
     description: Node version
     type: string
+  monorepoAppPath:
+    type: string
+    default: '.'
