changes to push assets job

--- a/src/jobs/js_push_build_to_bucket_job.yml
+++ b/src/jobs/js_push_build_to_bucket_job.yml
@@ -6,6 +6,13 @@ docker:
   - image: gcr.io/google.com/cloudsdktool/google-cloud-cli:alpine
 
 steps:
+  - when:
+      condition:
+        equal: [ true, << parameters.do_checkout >> ]
+      steps:
+        # in auth0 build files are committed
+        - checkout
+  - checkout
   - attach_workspace:
       at: .
   - run:
@@ -30,3 +37,6 @@ parameters:
     type: string
   source:
     type: string
+  do_checkout:
+    type: boolean
+    default: false
