--- a/src/jobs/js_yarn_runner_job.yml
+++ b/src/jobs/js_yarn_runner_job.yml
@@ -7,10 +7,13 @@ executor:
   name: js
   node-version: <<parameters.node-version>>
 
+working_directory: ~/project/<< parameters.working_directory >>
+
 # Execution
 
 steps:
-  - checkout
+  - checkout:
+      path: ~/project
   - attach_workspace:
       at: .
   - when:
@@ -18,9 +21,7 @@ steps:
       steps:
         - run:
             name: Running yarn command
-            command: |
-              cd << parameters.monorepoAppPath >>
-              yarn << parameters.script >>
+            command: yarn << parameters.script >>
             environment:
               JEST_JUNIT_OUTPUT_DIR: << parameters.reports_path >>
         - store_test_results:
@@ -32,9 +33,7 @@ steps:
       steps:
         - run:
             name: Running yarn command
-            command: |
-              cd << parameters.monorepoAppPath >>
-              yarn << parameters.script >>
+            command: yarn << parameters.script >>
 
 # generic CircleCI params
 
@@ -55,6 +54,6 @@ parameters:
     default: lts
     description: Node version
     type: string
-  monorepoAppPath:
+  working_directory: 
     type: string
-    default: '.'
+    default: ''
